--- a/index.html
+++ b/index.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="hi">
 <head>
-    <title>Mera Pehla Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mera Professional Page | GitHub</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <style>
+        * { margin: 0; padding: 0; box-box-sizing: border-box; font-family: 'Poppins', sans-serif; }
+        body { background-color: #f4f7f6; color: #333; line-height: 1.6; }
+        nav { background: #2c3e50; color: white; padding: 1rem 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; }
+        nav h1 { font-size: 1.5rem; letter-spacing: 1px; }
+        nav ul { list-style: none; display: flex; }
+        nav ul li { margin-left: 20px; }
+        nav ul li a { color: white; text-decoration: none; font-weight: 300; }
+        .hero { background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=1352&q=80'); 
+                height: 400px; background-size: cover; background-position: center; display: flex; flex-direction: column; 
+                justify-content: center; align-items: center; color: white; text-align: center; padding: 0 20px; }
+        .hero h2 { font-size: 3rem; margin-bottom: 10px; }
+        .hero p { font-size: 1.2rem; margin-bottom: 20px; }
+        .btn { background: #e74c3c; color: white; padding: 10px 25px; text-decoration: none; border-radius: 5px; font-weight: bold; transition: 0.3s; }
+        .btn:hover { background: #c0392b; }
+        .container { padding: 50px 5%; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
+        .card { background: white; padding: 30px; border-radius: 10px; text-align: center; box-shadow: 0 4px 15px rgba(0,0,0,0.1); transition: transform 0.3s; }
+        .card:hover { transform: translateY(-10px); }
+        .card h3 { color: #2c3e50; margin-bottom: 15px; }
+        footer { background: #2c3e50; color: white; text-align: center; padding: 20px; margin-top: 50px; }
+    </style>
 </head>
 <body>
-    <h1>Namaste! GitHub par meri website live hai.</h1>
-    <p>Ye website GitHub Pages se bani hai.</p>
+
+    <nav>
+        <h1>Mera Brand</h1>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section class="hero">
+        <h2>GitHub Par Swagat Hai!</h2>
+        <p>Main ek professional website developer hoon.</p>
+        <a href="#services" class="btn">Aur Jaanein</a>
+    </section>
+
+    <div class="container" id="services">
+        <div class="card">
+            <h3>Web Design</h3>
+            <p>Sunder aur modern websites banana meri pehchan hai.</p>
+        </div>
+        <div class="card">
+            <h3>SEO</h3>
+            <p>Aapki website ko Google ke top results mein laane mein madad karta hoon.</p>
+        </div>
+        <div class="card">
+            <h3>Support</h3>
+            <p>Website banne ke baad bhi poori madad milegi.</p>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Created by Aapka Naam | Made with ❤️ on GitHub</p>
+    </footer>
+
 </body>
 </html>
